--- a/_config.yml
+++ b/_config.yml
@@ -13,19 +13,17 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Your awesome title
-email: reachout@fiiv.io
+title: 80 Days
+email: contact@80days.in
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Travel and work journal for one @fiiv
 baseurl: "" # the subpath of your site, e.g. /blog
 
 permalink: /:year-:month-:day/:title
 
 paginate: 10
 
-url: "https://tech.fiiv.io" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://80days.in"
 twitter_username: mtimofiiv
 github_username:  mtimofiiv
 
