--- a/_config.yml
+++ b/_config.yml
@@ -15,8 +15,7 @@
 # in the templates via {{ site.myvariable }}.
 title: 80 Days
 email: contact@80days.in
-description: > # this means to ignore newlines until "baseurl:"
-  Travel and work journal for one @fiiv
+description: "@fiiv's Travel, work, lifestyle et al"
 baseurl: "" # the subpath of your site, e.g. /blog
 
 permalink: /:year-:month-:day/:title
