--- a/_config.yml
+++ b/_config.yml
@@ -39,8 +39,8 @@ exclude:
   - Gemfile
   - Gemfile.lock
 
-mike_location: Bangkok
-mike_location_flag: 🇹🇭
+mike_location: Phnom Penh
+mike_location_flag: 🇰🇭
 
 feed:
   categories:
