--- a/_config.yml
+++ b/_config.yml
@@ -24,8 +24,8 @@ exclude:
   - Gemfile
   - Gemfile.lock
 
-mike_location: Phnom Penh
-mike_location_flag: 🇰🇭
+mike_location: Da Nang
+mike_location_flag: 🇻🇳
 
 feed:
   categories:
